# TtCE

./: Bitboard.cpp  Bitboard.h  Bitboard.hpp  CMakeLists.txt  Evaluation.cpp  Evaluation.h  Evaluation.hpp  Magics.cpp  Magics.h  Magics.hpp  Move.cpp  Move.h  Move.hpp  Piece.cpp  Piece.h  README.md  Search.cpp  Search.h  Search.hpp  Testing.cpp  Testing.h  Testing.hpp  UCI.h  UCI.hpp  defsEnums.h  defsEnums.hpp  game.cpp  game.h  game.hpp  gameState.cpp  gameState.h  gameState.hpp  main.cpp  moveGen.cpp  moveGen.h  moveGen.hpp
src/: Bitboard.hpp  CMakeLists.txt  DefsEnums.hpp  Evaluation.hpp  Game.cpp  Game.hpp  GameState.cpp  Move.hpp  MoveGen.hpp  Search.hpp  Testing.cpp  UCI.hpp
